[LFC][IFC] ContinuousContent should tell InlineContentBreaker if the candidate content is hanging https://bugs.webkit.org/show_bug.cgi?id=234671

Reviewed by Antti Koivisto.

ContinuousContent now keeps track of whether the candidate run is a hanging content.
It enables InlineContentBreaker to just simply look at the flag to decide if the overflowing
(hanging) content should stay on the line or not.

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::processOverflowingContent const):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::append):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::reset):
* layout/formattingContexts/inline/InlineContentBreaker.h:
(WebCore::Layout::InlineContentBreaker::ContinuousContent::isHangingContent const):
* layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineCandidate::InlineContent::appendInlineItem):



Canonical link: https://commits.webkit.org/245578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287443 268f45cc-cd09-0410-ab3c-d52691b4dbfc